[build-system]
requires = ["setuptools>=61.0", "wheel", "uv>=0.1.18"]
build-backend = "setuptools.build_meta"

[project]
name = "overflow-hydro"
version = "0.3.0"
description = "High-performance Python library for hydrological terrain analysis with parallel, tiled algorithms"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Overflow Contributors"}
]
keywords = [
    "hydrology",
    "terrain-analysis",
    "dem",
    "digital-elevation-model",
    "flow-accumulation",
    "watershed",
    "geospatial",
    "gis",
    "parallel-processing",
    "numba"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Hydrology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.26.4,<2",
    "numba>=0.59.0",
    "shapely>=2.0.6",
    "rich>=13.9.4",
    "click>=8.0.0",
]

[project.optional-dependencies]
gdal = [
    "gdal>=3.6.2",
]
dev = [
    "pytest>=8.0.2",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-section-index>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/fema-ffrd/overflow"
Documentation = "https://fema-ffrd.github.io/overflow/"
Repository = "https://github.com/fema-ffrd/overflow"
Issues = "https://github.com/fema-ffrd/overflow/issues"

[project.scripts]
overflow = "overflow.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["overflow*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["build/", "dist/"]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B905",  # zip without explicit strict parameter
    "B904",  # raise without from inside except (intentional in CLI)
    "B007",  # unused loop variable (sometimes needed for iteration)
    "SIM102",  # nested if statements (readability preference)
    "SIM117",  # nested with statements (readability preference)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
